--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -10,7 +10,10 @@
                 <h1 class="text_main text_white align">{{accountName}}</h1>
             </div>
             <div class="account_input">
-                <div class="container_password">
+                <h1 class="text_main text_white">Metrics</h1>
+                <p>Games Added:<span>{{games}}</span></p>
+                <p>Events Created:<span>{{Events}}</span></p>
+                <!-- <div class="container_password">
                     <h1 class="text_main text_white">change Password</h1>
                     <div class="input_password">
                         <form>
@@ -30,7 +33,7 @@
                     <h1 class="text_main text_white">Clear GamesList</h1>
                     <p class="right_margin text_white text_body">This will completely empty your gamelist. You have been warned.</p>
                     <button class="text_main btn_purge">Purge!!</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
