--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -45,14 +45,29 @@
     height: 20%;
     color: #FFFFFF;
     display: flex;
-    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .playing {
-    width: 98%;
+    width: 100%;
     height: 6em;
+    margin-left: 1em;
+    margin-right: 1em;
     background-color: #4F345A;
-    align-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding-left: 1em;
+}
+
+.EventDescript {
+    grid-column: 1/3;
+    grid-row: 2;
+}
+
+.EventTitle {
+    grid-column: 1;
+    grid-row: 1;
 }
 
 .nav-splash {
@@ -64,7 +79,6 @@
     align-items: center;
     box-shadow: 0px 5px 10px black;
     align-self: flex-start;
-    z-index: 7;
 }
 
 .nav_splash_left {
