--- a/src/app/log-sign/log-sign.component.css
+++ b/src/app/log-sign/log-sign.component.css
@@ -39,6 +39,19 @@
     text-align: center;
 }
 
+.Altsign_resize {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 10px;
+    width: 80%;
+    justify-self: center;
+}
+
+.Altsign_resize:hover {
+    border-bottom: solid #662D91;
+    transition: 0.1s;
+}
+
 .btn_align {
     border-style: none;
     background-color: #662D91;
@@ -46,14 +59,14 @@
     padding: 10px;
     width: 5em;
     font-size: 20pt;
-    margin-top: 3em;
+    margin-top: 15px;
 }
 
 .container_btn {
     width: 100%;
     bottom: 0;
     display: flex;
-    align-self: flex-end;
+    align-self: center;
     justify-content: center;
 }
 
@@ -64,6 +77,14 @@
 }
 
 .form-control {
+    height: 18em;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+}
+
+.form-control-sign {
     height: 20em;
     width: 90%;
     display: flex;
@@ -81,11 +102,22 @@
     margin-bottom: 1em;
 }
 
-.btn_google {
-    max-width: 6em;
-    max-height: 2em;
+.btn_Altlog {
+    max-width: 14em;
+    height: 2em;
     box-shadow: 0px 0px 10px #000000;
-    top: 5;
+    /* top: 5; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+    margin-left: 3em;
+}
+
+.btn_Altlog:hover {
+    background-color: #662D91;
+    transition: 0.5s;
+    color: #F5F5F5;
 }
 
 .overlay {
@@ -103,8 +135,49 @@
 }
 
 .container_alts {
-    background-color: #ffffff;
-    width: 48em;
+    background-color: #F5F5F5;
+    width: 20em;
     height: 70%;
     opacity: 1.0;
+    text-align: center;
+    z-index: 11;
+}
+
+.icon_adjust {
+    margin-right: 5px;
+}
+
+.nav-splash {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 3em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 5px 10px black;
+    align-self: flex-start;
+    z-index: 7;
+}
+
+.nav_splash_left {
+    display: flex;
+    width: 20em;
+    height: 100%;
+    align-items: center;
+    background-color: white;
+}
+
+.header_signup:hover {
+    border-bottom: solid;
+    border-bottom-color: #662D91;
+}
+
+.header_login:hover {
+    border-bottom: solid;
+    border-bottom-color: #662D91;
+}
+
+.passAlert {
+    font-size: 10pt;
+    color: red;
 }
