angularfire intergration part 1

--- a/src/app/calender-create/calender-create.component.html
+++ b/src/app/calender-create/calender-create.component.html
@@ -16,14 +16,15 @@
                         <input type="date" name="start" ngModel>
                     </div>
                     <div class="input_format">
-                        <label name="description">Location of event</label>
+                        <!-- TODO: Change back to Location -->
+                        <label name="description">description</label>
                         <input type="text" name="description" ngModel>
                     </div>
                     <button class="btn_align text_main text_white">Create</button>
                 </form>
             </div>
-            <div class="column_area">
-                <form>
+            <!-- <div class="column_area"> -->
+            <!-- <form>
                     <div class="input_format">
                         <label class="text_main text_white label_big">Games</label>
                         <textarea rows="10" cols="50"></textarea>
@@ -32,8 +33,8 @@
                         <label class="text_main text_white label_big">Info</label>
                         <textarea rows="10" cols="50"></textarea>
                     </div>
-                </form>
-            </div>
+                </form> -->
+            <!-- </div> -->
         </div>
     </div>
 </div>
