--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -11,8 +11,8 @@
             </div>
             <div class="account_input">
                 <h1 class="text_main text_white">Metrics</h1>
-                <p>Games Added:<span>{{games}}</span></p>
-                <p>Events Created:<span>{{Events}}</span></p>
+                <p class="text_main text_white">Games Added:<span class="text_body">{{games}}</span></p>
+                <p class="text_main text_white">Events Created:<span class="text_body">{{Event}}</span></p>
                 <!-- <div class="container_password">
                     <h1 class="text_main text_white">change Password</h1>
                     <div class="input_password">
