--- a/src/app/gamelist/gamelist.component.css
+++ b/src/app/gamelist/gamelist.component.css
@@ -155,3 +155,24 @@
     padding: 10px;
     font-size: 18pt;
 }
+
+.detailStyle:hover {
+    border-bottom: solid;
+    border-bottom-color: #662D91;
+}
+
+.gameDetail {
+    background: #29ABE2;
+    width: 100%;
+    height: 100%;
+}
+
+.gameEdit {
+    width: 100%;
+    height: 100%;
+}
+
+.DeleteGame:hover {
+    text-decoration-line: underline;
+    color: rgb(201, 70, 70);
+}
