--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -34,6 +34,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 3px black;
 }
 
 .inline_calender_controls {
@@ -58,6 +59,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     padding-left: 1em;
+    box-shadow: 0px 0px 3px black;
 }
 
 .EventDescript {
@@ -77,7 +79,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 5px 10px black;
+    box-shadow: 0px 5px 3px black;
     align-self: flex-start;
 }
 
@@ -140,6 +142,12 @@
     color: #FFFFFF;
     font-size: 18pt;
     margin-top: 24px;
+    box-shadow: 0px 3px 3px black;
+}
+
+.sidebar_btn:hover {
+    background-color: #29ABE2;
+    transition: 1s;
 }
 
 .nav {
