--- a/src/app/gamelist/gamelist.component.css
+++ b/src/app/gamelist/gamelist.component.css
@@ -96,18 +96,24 @@
 .game {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #662D91;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 33% 33% 33%;
     height: 6em;
     margin: 10px;
 }
 
 .text_correct {
-    margin: 20px;
+    grid-row: 2;
+    grid-column: 1/2;
 }
 
 .game_title {
     margin: 4px;
+    grid-row: 1;
+    grid-column: 1/2;
 }
 
 .game:hover {
@@ -136,6 +142,13 @@
     margin-left: 18px;
 }
 
+.form-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(5, 5em);
+    gap: 9px;
+}
+
 .form-group {
     display: flex;
     flex-direction: column;
@@ -162,7 +175,6 @@
 }
 
 .gameDetail {
-    background: #29ABE2;
     width: 100%;
     height: 100%;
 }
@@ -172,7 +184,18 @@
     height: 100%;
 }
 
+.DeleteGame {
+    border-style: none;
+    background-color: rgb(201, 70, 70);
+    color: #ffffff;
+    padding: 1em;
+    margin: 10px;
+}
+
 .DeleteGame:hover {
-    text-decoration-line: underline;
-    color: rgb(201, 70, 70);
+    background-color: rgb(189, 64, 64);
+}
+
+.text {
+    text-align: right;
 }
