--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -10,9 +10,13 @@
         <!-- GameList -->
         <div class="container_games">
             <div class="game text_white" (click)="onSelect(game)" *ngFor="let game of snapGames | async">
-                <h1 class="text_main game_title">{{game.GameName}}</h1>
-                <p class="text_body text_correct">{{game.GameDescript}}</p>
-                <button class="text_body text_white DeleteGame" (click)="DeleteGame(game.key)">Delete</button>
+                <div class="text">
+                    <h1 class="text_main game_title">{{game.GameName}}</h1>
+                    <p class="text_body text_correct">{{game.GameDescript}}</p>
+                </div>
+                <div class="gameControl">
+                    <button class="text_body text_white DeleteGame" (click)="DeleteGame(game.key)">Delete</button>
+                </div>
             </div>
         </div>
 
@@ -50,14 +54,34 @@
                 <img src="../assets/Asset 3.svg" (click)="showGameList()" alt="" class="img_close">
             </div>
             <div class="container_input">
-                <form (ngSubmit)="addNewGame(f)" #f="ngForm">
-                    <div class="form-group">
+                <form (ngSubmit)="addNewGame(f)" #f="ngForm" class="form-grid">
+                    <div class="form-group name">
                         <label for="gameName" class="text_body text_white">Name of Game</label>
-                        <input type="text" name="GameName" class="text_body" ngModel>
+                        <input type="text" name="GameName" class="text_body gameName" ngModel>
                     </div>
                     <div class="form-group">
                         <label for="GameDescript" class="text_body text_white">Game Info</label>
-                        <textarea rows="15" name="GameDescript" ngModel></textarea>
+                        <textarea rows="15" name="GameDescript" class="gameDescript" ngModel></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="additional" class="text_body text_white">Additonal notes</label>
+                        <textarea rows="15" name="additional" class="additional" ngModel></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="date" class="text_body text_white">Date Added</label>
+                        <input type="date" name="date" class="date" ngModel>
+                    </div>
+                    <div class="form-group">
+                        <label for="rules" class="text_body text_white">Rules</label>
+                        <textarea rows="15" name="rules" class="rules" ngModel></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="creator" class="text_body text_white">Created by</label>
+                        <input type="text" name="creator" class="creator" ngModel>
+                    </div>
+                    <div class="form-group">
+                        <label for="numOfPlay" class="text_body text_white">Date Added</label>
+                        <input type="text" name="numOfPlay" class="numOfPlay" ngModel>
                     </div>
                     <div class="container_btn">
                         <button class="btn_align text_main text_white" type="submit">Create</button>
