--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Sansita');
 body {
-    background-color: #662D91;
+    background: linear-gradient( #662D91, rgb(59, 26, 85));
+    background-attachment: fixed;
 }
 
 .text_main {
