--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -38,7 +38,9 @@
 }
 
 .inline_calender_controls {
-    display: inline;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 .nowPlaying {
@@ -79,7 +81,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 5px 3px black;
+    box-shadow: 0px 2px 3px black;
     align-self: flex-start;
 }
 
@@ -98,6 +100,7 @@
     width: 30em;
     background-color: white;
     justify-content: flex-end;
+    margin-right: 10px;
 }
 
 .nav_img {
@@ -116,6 +119,11 @@
     align-items: center;
     padding: 5px;
     color: #FFFFFF;
+}
+
+.log_box:hover {
+    background-color: #29ABE2;
+    transition: 0.3s;
 }
 
 .name_box {
@@ -142,12 +150,12 @@
     color: #FFFFFF;
     font-size: 18pt;
     margin-top: 24px;
-    box-shadow: 0px 3px 3px black;
+    box-shadow: 0px 0px 3px black;
 }
 
 .sidebar_btn:hover {
     background-color: #29ABE2;
-    transition: 1s;
+    transition: 0.5s;
 }
 
 .nav {
@@ -161,4 +169,67 @@
 
 .img_size {
     width: 90%;
+}
+
+.logout:hover {
+    background-color: #29ABE2;
+    transition: 0.3s;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 3em;
+    height: 1em;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #662D91;
+    -webkit-transition: .4s;
+    transition: .4s;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 4px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.calender-switch {
+    display: flex;
+    align-items: center;
 }
