--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -233,3 +233,51 @@ input:checked+.slider:before {
     display: flex;
     align-items: center;
 }
+
+.friendbox {
+    position: relative;
+    width: 5em;
+    height: 10em;
+    background-color: #4F345A;
+    display: flex;
+    align-items: center;
+}
+
+.front {
+    z-index: 40;
+}
+
+.FriendsList {
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    align-items: center;
+    width: 20em;
+    height: 10em;
+    background-color: #4F345A;
+    z-index: 30;
+    top: 3em;
+    right: 13em;
+    box-shadow: 0px 2px 3px;
+}
+
+.Friend {
+    display: flex;
+    background-color: #662D91;
+    width: 20em;
+    height: 2em;
+    align-items: center;
+    justify-content: center;
+}
+
+.addFriend {
+    border-style: none;
+    background-color: #29ABE2;
+    height: 3em;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.friendHolder {
+    width: 10em;
+}
